fud2/tests/snapshots/tests__emit@calyx_icarus_vcd.snap
---
source: fud2/tests/tests.rs
description: emit calyx -> vcd through icarus
---
build-tool = fud2
rule get-rsrc
  command = $build-tool get-rsrc $out

# Calyx compiler
calyx-base = /test/calyx
calyx-exe = $calyx-base/target/debug/calyx
args = 
rule calyx
  command = $calyx-exe -l $calyx-base -b $backend $args $in > $out
rule calyx-pass
  command = $calyx-exe -l $calyx-base -p $pass $args $in > $out

# RTL simulation
python = python3
build json-dat.py: get-rsrc
rule hex-data
  command = $python json-dat.py --from-json $in $out
rule json-data
  command = $python json-dat.py --to-json $out $in
sim_data = /test/data.json
datadir = sim_data
build $datadir: hex-data $sim_data | json-dat.py
rule sim-run
  command = ./$bin +DATA=$datadir +CYCLE_LIMIT=$cycle-limit $args > $out
cycle-limit = 500000000

# Standalone Testbench Setup
build tb.sv: get-rsrc

# Icarus Verilog
iverilog = iverilog
rule icarus-compile-standalone-tb
  command = $iverilog -g2012 -o $out tb.sv $in
rule icarus-compile-custom-tb
  command = $iverilog -g2012 -o $out tb.sv memories.sv $in

# build targets
build verilog-noverify.sv: calyx stdin
  backend = verilog
  args = --disable-verify
build sim.exe: icarus-compile-standalone-tb verilog-noverify.sv | tb.sv
build sim.log _from_stdin_vcd.vcd: sim-run sim.exe $datadir
  bin = sim.exe
  args = +NOTRACE=0 +OUT=_from_stdin_vcd.vcd

default _from_stdin_vcd.vcd
