fud2/tests/snapshots/tests__emit@dahlia_calyx.snap
---
source: fud2/tests/tests.rs
description: emit dahlia -> calyx
---
build-tool = fud2
rule get-rsrc
  command = $build-tool get-rsrc $out

# Dahlia compiler
dahlia-exe = /test/bin/dahlia
rule dahlia-to-calyx
  command = $dahlia-exe -b calyx --lower -l error $in -o $out

# build targets
build _from_stdin_calyx.futil: dahlia-to-calyx _from_stdin_dahlia.fuse

default _from_stdin_calyx.futil
