fud2/tests/snapshots/tests__emit@mrxl_calyx.snap
---
source: fud2/tests/tests.rs
description: emit mrxl -> calyx
---
build-tool = fud2
rule get-rsrc
  command = $build-tool get-rsrc $out

mrxl-exe = mrxl
rule mrxl-to-calyx
  command = $mrxl-exe $in > $out

build stdin.futil: mrxl-to-calyx stdin

default stdin.futil
