fud2/tests/snapshots/tests__test@calyx_through_cider_to_dat.snap
---
source: fud2/tests/tests.rs
description: "emit request: calyx -> dat through cider"
---
build-tool = fud2
rule get-rsrc
  command = $build-tool get-rsrc $out

calyx-base = /test/calyx
calyx-exe = $calyx-base/target/debug/calyx
calyx-lib-path = $calyx-base
args = 
rule calyx
  command = $calyx-exe -l $calyx-lib-path -b $backend $args $in > $out
rule calyx-pass
  command = $calyx-exe -l $calyx-lib-path -p $pass $args $in > $out
cider-calyx-passes = -p none
rule calyx-cider
  command = $calyx-exe -l $calyx-lib-path $cider-calyx-passes $args $in > $out

cider-exe = $calyx-base/target/debug/cider
cider-converter = $calyx-base/target/debug/auxin
converter-flags = 
cider-flags = 
build new_conv.jq: get-rsrc
data = --data data.dump
sim_data = /test/data.json
rule run-cider-debug
  command = $cider-exe -l $calyx-base $data $cider-flags $in debug && echo > $out
  pool = console
rule run-cider
  command = $cider-exe -l $calyx-base $data $cider-flags $in > $out
rule interp-to-dump
  command = $cider-converter --to json $converter-flags $in | jq -f new_conv.jq > $out
rule dump-to-interp
  command = $cider-converter --to cider $converter-flags $in > $out
build data.dump: dump-to-interp $sim_data | $cider-converter

build cider_1: calyx-cider calyx_0.futil
build interp_out.dump: run-cider cider_1 | data.dump
build dat_1.json: interp-to-dump interp_out.dump | $cider-converter new_conv.jq

default dat_1.json
