fud2/tests/snapshots/tests__test@calyx_through_verilator_to_vcd.snap
---
source: fud2/tests/tests.rs
description: "emit request: calyx -> vcd through verilator"
---
build-tool = fud2
rule get-rsrc
  command = $build-tool get-rsrc $out

calyx-base = /test/calyx
calyx-exe = $calyx-base/target/debug/calyx
calyx-lib-path = $calyx-base
args = 
rule calyx
  command = $calyx-exe -l $calyx-lib-path -b $backend $args $in > $out
rule calyx-pass
  command = $calyx-exe -l $calyx-lib-path -p $pass $args $in > $out
cider-calyx-passes = -p none
rule calyx-cider
  command = $calyx-exe -l $calyx-lib-path $cider-calyx-passes $args $in > $out

auxin = $calyx-base/target/debug/auxin
rule hex-data
  command = $auxin $in --from json --to dat -o $out
rule json-data
  command = $auxin -e out $in --from dat --to json -o $out
build legacy_data.jq: get-rsrc
rule json-data-cleanup
  command = awk '/Simulated/ {print $$2}' $log | xargs jq -f legacy_data.jq $in --argjson cycles > $out
sim_data = /test/data.json
datadir = sim_data
build $datadir: hex-data $sim_data
rule sim-run
  command = ./$bin +DATA=$datadir +CYCLE_LIMIT=$cycle-limit $args > $out || (cat $out >&2 && false)
cycle-limit = 500000000

build tb.sv: get-rsrc

verilator = verilator
cycle-limit = 500000000
rule verilator-compile-standalone-tb
  command = $verilator $in tb.sv --trace --binary --top-module toplevel -fno-inline -Mdir $out-dir
rule verilator-compile-custom-tb
  command = $verilator $in tb.sv memories.sv --trace --binary --top-module toplevel -fno-inline -Mdir $out-dir
rule cp
  command = cp $in $out

build verilog_1.sv: calyx calyx_0.futil
  backend = verilog
build verilator-out/Vtoplevel: verilator-compile-standalone-tb verilog_1.sv | tb.sv
  out-dir = verilator-out
build sim_1.exe: cp verilator-out/Vtoplevel
build sim.log vcd_1.vcd: sim-run sim_1.exe $datadir
  bin = sim_1.exe
  args = +NOTRACE=0 +OUT=vcd_1.vcd

default vcd_1.vcd
